@@ -1,6 +1,7 @@
 2.5.7 (11.10.2019):
 
-* Recognise "Document Table" as flatbed for imagescan backend
+* Recognise "Document Table" as flatbed for imagescan backend.
+* Use option name as label for those options with no title.
 
 
 2.5.6 (11.09.2019):
